--- a/templates/slates/up_next_and_later.webvfx.html
+++ b/templates/slates/up_next_and_later.webvfx.html
@@ -61,8 +61,7 @@
 			width: 700px;
 			}
 			.line {
-			width: 3px;
-			height: 150px;
+		
 			display: inline-block;
 			float: left;
 			padding: 0px;
@@ -154,13 +153,13 @@
 							<h2 id="sessionInfo"> Developer name  </p>
 					</div>		
 					<h1 class = "slateText laterText"> Later: </h1>
-					<img class = "line lineOne" src="../../res/images/line2.svg"> 
+					<img class = "line lineOne" src="../../res/images/line2.png"> 
 					<div class = "later lateOne">
 					<h1 id = "laterTime"> 00:00 - 00:00 </h1>
 							<h1 class="latersessionName"> Session</h1>
 							<h2 class="latersessionInfo"> Developer</h2>  	
 					</div>
-					<img class = "line lineTwo" src="../../res/images/line2.svg"> 
+					<img class = "line lineTwo" src="../../res/images/line2.png"> 
 					<div class = "later lateTwo">			 
 							<h1 id = "laterTime"> 00:00 - 00:00 </h1>
 							<h1 class="latersessionName"> Name of Session</h1>
