--- a/templates/slates/join_us_for_egx.webvfx.html
+++ b/templates/slates/join_us_for_egx.webvfx.html
@@ -2,8 +2,8 @@
 	<head>
 		<style type="text/css">
 			body {
-				margin: 0px !important;  height: 100%;
-			}
+				margin: 0px !important;  height: 1080px; width: 1920px;
+			 }
 			.wrapper {
 				background-color: grey;
 				background: url(../../res/images/background) no-repeat  ;
@@ -32,7 +32,7 @@
 				color: #50e7e8;
 				text-transform: uppercase;			
 				color: #50e7e8;
-1			font-family: "NB Grotesk";		
+			font-family: "NB Grotesk";		
 				font-size: 36px;
 			}
 			#sessionName {
@@ -51,14 +51,13 @@
 			margin-left: 40px;
 			}
 			.links img {
-			width: 3px;
-			height: auto;
+		
 			display: inline-block;
 			padding: 0px;
 			margin-left: -20px;	
 			}
 			.links h1 {
-			margin-top: -100px;
+		
 			margin-left: 40px;		
 			}
 			.links p {
@@ -66,6 +65,11 @@
 			line-height: 0.1;
 			margin-top:  -3px;
 			}
+			.line {
+				
+				width: 5px;
+				height: 100px;
+				}
 		</style>
 		<script src="../../lib/jquery-2.1.3.min.js"></script>
 		<script src="../../lib/TweenMax.min.js"></script>
@@ -89,13 +93,13 @@
 					$('#sessionInfo').text(webvfx.getStringParameter("sessionInfo"));
 				}
 				var tl = new TimelineLite();
-				tl.from(".wrapper", 2, { css: { width: "0px"}, ease:Power4. easeOut }, "start" )
+				tl.from(".wrapper", 2, { css: { }, ease:Power4. easeOut }, "start" )
 					.from( "#now", 0.5, { css: { marginLeft: "-=30", autoAlpha:0 },ease: Power4. easeInOut }, "start -=1.5", "day" )
 					.from( "#sessionName", 0.7, { css: { marginTop: "-=30", autoAlpha:0 },ease: Power4. easeInOut }, "start -=1.4", "one")			 
 					.from( "#sessionInfo", 0.7, { css: { marginTop: "-60", autoAlpha:0 },ease: Power4. easeInOut },  "start -=1.3", "two" )
 					.from( ".links", 0.2, { css: {marginLeft: "-10px", autoAlpha:0 }, ease: Power4. easeInout }, "two-=0.8", "end");
 				if( typeof webvfx !== "undefined" ) {
-					tl.pause();  // start paused
+				tl.pause();  // start paused
 					var producer = new Producer(tl);
 					webvfx.renderRequested.connect(producer, Producer.prototype.sync);
 					webvfx.readyRender(true);
@@ -119,7 +123,7 @@
 					<h2 id="sessionInfo"> September 24-27 at Birmingham NEC. </h2>
 			</div>		
 			<div class = "links">
-				 <img src="../../res/images/line.svg">	   
+				 <img src="../../res/images/line2.png">	   
 				   <h1 class = "hashtag slateText"> #EGX </h1>
 				   <p> www.twitch.tv/egx </p>
 				   <p> www.youtube.com/egxtv </p>	  
