--- a/templates/slates/now.webvfx.html
+++ b/templates/slates/now.webvfx.html
@@ -2,7 +2,7 @@
 	<head>
 		<style type="text/css">
 			body {
-			margin: 0px !important;  height: 100%;
+			margin: 0px !important;   height: 1080px; width: 1920px;
 			}
 			.wrapper {
 			background-color: grey;
@@ -11,7 +11,8 @@
 			background-size: 1500px;
 			background-color: #360c40;	   
 			line-height: 1.1;
-			height: 100%;
+			height: 100%;height: 1080px; width: 1920px;
+
 			}
 			#slate {
 			display: inline-block;
@@ -51,12 +52,10 @@
 			margin-left: 40px;
 			}
 			.links img {
-			width: 3px;
-			height: auto;
+		
 			display: inline-block;
 			padding: 0px;
-			margin-left: -20px;	
-			}
+			margin-left: -90px; 			}
 			.links h1 {
 			margin-top: -100px;
 			margin-left: 40px;		
@@ -89,8 +88,10 @@
 					$('#sessionInfo').text(webvfx.getStringParameter("sessionInfo"));
 				}
 				var tl = new TimelineLite();
-				tl.from(".wrapper", 2, { css: { width: "0px"}, ease:Power4. easeOut }, "start" )
-					.from( "#now", 0.5, { css: { marginLeft: "-=30", autoAlpha:0 },ease: Power4. easeInOut }, "start -=1.5", "day" )
+			
+						tl.from(".wrapper", 2, { css: { }, ease:Power4. easeOut }, "start" )
+						
+						.from( "#now", 0.5, { css: { marginLeft: "-=30", autoAlpha:0 },ease: Power4. easeInOut }, "start -=1.5", "day" )
 					.from( "#sessionName", 0.7, { css: { marginTop: "-=30", autoAlpha:0 },ease: Power4. easeInOut }, "start -=1.4", "one")			 
 					.from( "#sessionInfo", 0.7, { css: { marginTop: "-60", autoAlpha:0 },ease: Power4. easeInOut },  "start -=1.3", "two" )
 					.from( ".links", 0.2, { css: {marginLeft: "-10px", autoAlpha:0   }, ease: Power4. easeInout }, "two-=0.8", "end")
@@ -98,8 +99,8 @@
 					.to( "#now", 0.3, { css: {  autoAlpha: 0},ease: Power4. easeInOut }, "end+=6" )
 					.to( "#sessionName", 0.1, { css: {   marginLeft: "-9000" },ease: Power4. easeInOut }, "end+=6"  )			 
 					.to( "#sessionInfo", 0.1, { css: { marginLeft: "-9000"  },ease: Power4. easeInOut }, "end+=6" )
-					.to( ".links", 0.1, { css: { marginLeft: "-9000"  }, ease: Power4. easeInout }, "end+=6"  )
-				.to(".wrapper", 1, { css: { width: "0px"}, ease:Power4. easeOut }, "end+=6"  );
+					.to( ".links", 0.1, { css: { marginLeft: "-9000"  }, ease: Power4. easeInout }, "end+=6"  );
+				
 				if( typeof webvfx !== "undefined" ) {
 					tl.pause();  // start paused
 					var producer = new Producer(tl);
@@ -124,7 +125,7 @@
 				<h2 id="sessionInfo"> Designers from ArenaNet </h2>
 			</div>		
 			<div class = "links">
-				<img src="../../res/images/line.svg">	   
+				<img src="../../res/images/line2.png">	   
 				<h1 class = "hashtag slateText"> #EGX </h1>
 				<p> www.twitch.tv/egx </p>
 				<p> www.youtube.com/egxtv </p>	  
