--- a/templates/slates/up_next.webvfx.html
+++ b/templates/slates/up_next.webvfx.html
@@ -2,7 +2,7 @@
 	<head>
 		<style type="text/css">
 			body {
-				margin: 0px !important;  height: 100%;
+				margin: 0px !important;  height: 1080px; width: 1920px;
 			 }
 			.wrapper {
 				background-color: grey;
@@ -48,24 +48,25 @@
 			font-size: 25px;
 			display: block;
 			margin-top: 90px;
-			margin-left: 40px;
+			margin-left: -60px;
 			}
 			 .links img {
-				width: 3px;
-				height: auto;
+				
+				
 				display: inline-block;
 				padding: 0px;
-				margin-left: -20px;	
+				margin-left: -0px;	
 			}
 			.links h1 {
 			margin-top: -100px;
-			margin-left: 40px;		
+			margin-left: 150px;		
 			}
 			.links p {
-			margin-left: 40px;	
+			margin-left: 150px;	
 			line-height: 0.1;
 			margin-top:  -3px;
 			}
+			
 		</style>
 		<script src="../../lib/jquery-2.1.3.min.js"></script>
 		<script src="../../lib/TweenMax.min.js"></script>
@@ -90,18 +91,19 @@
 					$('body').css({'background-color': webvfx.getStringParameter("bgcolor")});
 				}
 				var tl = new TimelineLite();
-				tl.from(".wrapper", 2, { css: { width: "0px"}, ease:Power4. easeOut }, "start" )
+				tl.from(".wrapper", 2, { }, "start" )
 					.from( "#next", 0.5, { css: { marginLeft: "-=30", autoAlpha:0 },ease: Power4. easeInOut }, "start -=1.5", "day" )
 					.from( "#sessionName", 0.7, { css: { marginTop: "-=30", autoAlpha:0 },ease: Power4. easeInOut }, "start -=1.4", "one")			 
 					.from( "#sessionInfo", 0.7, { css: { marginTop: "-60", autoAlpha:0 },ease: Power4. easeInOut },  "start -=1.3", "two" )
 					.from( ".links", 0.2, { css: {marginLeft: "-10px", autoAlpha:0   }, ease: Power4. easeInout }, "two-=0.8", "end")
 					//adjust the number added to "end" label to increase the time the slate is on the screen.
-					.to( "#next", 0.3, { css: {  autoAlpha: 0},ease: Power4. easeInOut }, "end+=6" )
+					
+.to( "#next", 0.3, { css: {  autoAlpha: 0},ease: Power4. easeInOut }, "end+=6" )
 					.to( "#sessionName", 0.1, { css: { autoAlpha: 0},ease: Power4. easeInOut }, "end+=6"  )			 
 					.to( "#sessionInfo", 0.1, { css: { autoAlpha: 0 },ease: Power4. easeInOut }, "end+=6" )
 					.to( ".links", 0.1, { css: { autoAlpha: 0 }, ease: Power4. easeInout }, "end+=6"  )
-					.to(".wrapper", 1, { css: { width: "0px"}, ease:Power4. easeOut }, "end+=6"  );
-
+;
+					
 				if( typeof webvfx !== "undefined" ) {
 					tl.pause();  // start paused
 					var producer = new Producer(tl);
@@ -126,7 +128,7 @@
 					<h2 id="sessionInfo"> Designers from ArenaNet </h2>
 			</div>		
 			<div class = "links">
-				 <img src="../../res/images/line.svg">	   
+				 <img src="../../res/images/line2.png">	   
 				   <h1 class = "hashtag slateText"> #EGX </h1>
 				   <p> www.twitch.tv/egx </p>
 				   <p> www.youtube.com/egxtv </p>	  
