--- a/templates/slates/join_us_for_egx.webvfx.html
+++ b/templates/slates/join_us_for_egx.webvfx.html
@@ -34,12 +34,14 @@
 				color: #50e7e8;
 			font-family: "NB Grotesk";		
 				font-size: 36px;
+				
 			}
 			#sessionName {
-				margin-top: 120px;
+				margin-top: px;
 			}
 			.hashtag {
 			color: #e55b9a;
+		 margin-top: -100px;
 			}
 			.links  {
 			display: block;
@@ -54,7 +56,7 @@
 		
 			display: inline-block;
 			padding: 0px;
-			margin-left: -20px;	
+			margin-left: -110px;	
 			}
 			.links h1 {
 		
@@ -65,10 +67,11 @@
 			line-height: 0.1;
 			margin-top:  -3px;
 			}
-			.line {
+			.line  {
 				
 				width: 5px;
 				height: 100px;
+				margin-left: -130px;
 				}
 		</style>
 		<script src="../../lib/jquery-2.1.3.min.js"></script>
