--- a/templates/slates/join_us_for_egx.webvfx.html
+++ b/templates/slates/join_us_for_egx.webvfx.html
@@ -3,76 +3,83 @@
 		<style type="text/css">
 			body {
 				margin: 0px !important;  height: 1080px; width: 1920px;
+				background-color: #3C1348;
+				padding: 0px;
 			 }
 			.wrapper {
-				background-color: grey;
-				background: url(../../res/images/background) no-repeat  ;
-				background-position: right top;
-				background-size: 1500px;
-				background-color: #360c40;	   
-				line-height: 1.1;
-				height: 100%;
+				background: url(../../res/images/background2.png) no-repeat bottom left;
+				margin: 0px !important;  height: 1080px; width: 1920px; background-color: #3C1348;
+				background-color: #3C1348;
 			}
 			#slate {
-				display: inline-block;
-				margin-top: 390px;
-				margin-left: 415px;		 	
+				display:  block;
+				position: absolute;
+				left: 620px;
+				top: 80px;	 
 			}
 			h1, h2 {
 				font-family: Helvetica Neue;
 				color: white;
-				font-size: 90px;
 				font-weight: 300;
+				width: 1050px;
+				line-height: 1.1;
+				margin-top: 0.2em;
+				margin-bottom: 0px;
+				font-size: 1.3em;
 			}
 			h2 {
-				font-size: 70px;
 				font-weight: 100;
+				line-height: 1.1;
 			}
-			.slateText {
+			.slateText.day, .hashtag {
 				color: #50e7e8;
 				text-transform: uppercase;			
-				color: #50e7e8;
-			font-family: "NB Grotesk";		
-				font-size: 36px;
-				
-			}
-			#sessionName {
-				margin-top: px;
+				font-family: "NB Grotesk";		
+				font-size: 1.3em;
 			}
 			.hashtag {
-			color: #e55b9a;
-		 margin-top: -100px;
+				color: #e55b9a;
+				font-size: 1.3em;
+			}
+			.session  {
+				color: white;
+				font-family: "NB Grotesk";
+				margin-top: 350px;
+			}
+			.sessionName {
+				font-size: 2.5em;
+				display: block;
+				width: 100%;
+			}
+			.logo {
+				width: 300px;
+				display: block;
+				position: absolute;
+				top: 85px;
+				left: 120px;
+			}		
+			.sessionTime {
+				font-family: "NB Grotesk";
+				font-size: 2em;
+				color: #e65d9b;
+			}
+			.sessionName {
+			}
+			.sessionInfo {
+				font-size: 2em;
 			}
 			.links  {
-			display: block;
-			color: white;
-			font-family: "NB Grotesk";
-			font-size: 25px;
-			display: block;
-			margin-top: 90px;
-			margin-left: 40px;
-			}
-			.links img {
-		
-			display: inline-block;
-			padding: 0px;
-			margin-left: -110px;	
-			}
-			.links h1 {
-		
-			margin-left: 40px;		
+				display: block;
+				color: white;
+				font-family: "NB Grotesk";
+				font-size: 1.3em;
+				position: absolute;
+				left: 150px;
+				top: 835px;
 			}
 			.links p {
-			margin-left: 40px;	
-			line-height: 0.1;
-			margin-top:  -3px;
+				line-height: 0.1;
 			}
-			.line  {
-				
-				width: 5px;
-				height: 100px;
-				margin-left: -130px;
-				}
 		</style>
 		<script src="../../lib/jquery-2.1.3.min.js"></script>
 		<script src="../../lib/TweenMax.min.js"></script>
@@ -117,21 +124,20 @@
 		</script>
 	</head>
 <body>
-<div class="wrapper">
-	<div id="slate">
-			<h1 class = "slateText" id="now">  </h1>
-			<div class="session">
-					<h1 id="sessionName">  That's all for Rezzed this year. <br>  
-				 	Join us for EGX 2015! </h1>
-					<h2 id="sessionInfo"> September 24-27 at Birmingham NEC. </h2>
-			</div>		
-			<div class = "links">
-				 <img src="../../res/images/line2.png">	   
-				   <h1 class = "hashtag slateText"> #EGX </h1>
-				   <p> www.twitch.tv/egx </p>
-				   <p> www.youtube.com/egxtv </p>	  
-			</div>
-	</div>   
-</div> 
+	<div class="wrapper">
+			<img class = "logo" src="../../res/images/rezzedLogo.png"> 
+		<div id="slate">
+				<div class="session">
+					<h1 class="sessionName">  That's all for Rezzed this year. <br>  
+					Join us for EGX 2015! </h1>
+					<h2 class="sessionInfo"> September 24-27 at Birmingham NEC. </h2>
+				</div>		
+		</div>   
+		<div class = "links">
+			   <h1 class = "hashtag slateText"> #EGX </h1>
+			   <p> www.twitch.tv/egx </p>
+			   <p> www.youtube.com/egxtv </p>	  
+		</div>
+	</div> 
 </body>
 </html>
