batch files for rendering everything

--- a/templates/lower_thirds/lt.webvfx.html
+++ b/templates/lower_thirds/lt.webvfx.html
@@ -60,7 +60,7 @@
 				font-size: 1.3em;
 				font-weight: 100;
 				position: relative;
-				width: 800px;
+				width: 780px;
 			}
 		 
 		</style>
@@ -92,16 +92,15 @@
 
 				//  ANIMATION //
 
-				/*var tl = new TimelineLite();
-				tl.from(".triangle", 1, { css: { width: "0px", left: "-900" }, ease:Power4. easeOut } , "entry") 
+				var tl = new TimelineLite();
+				/*tl.from(".triangle", 1, { css: { width: "0px", left: "-900" }, ease:Power4. easeOut } , "entry") 
 					.from( ".slateText", 0.5, { css: {  autoAlpha:0 },ease: Power4. easeInOut }, "entry -=0.5", "now" )
 					.from( "#sessionName", 0.5, { css: {   autoAlpha:0 },ease: Power4. easeInOut }, "now -=0.45", "sessionName" )
 					.from( "#sessionInfo", 0.5, { css: {   autoAlpha:0 },ease: Power4. easeInOut }, "sessionName-=0.45", "end")
 					.to(".triangle", 1, { css: { width: "0px", left: "-900" }, ease:Power4. easeOut } , "end+=3")
 					.to( ".slateText", 0.2, { css: {  autoAlpha:0 },ease: Power4. easeInOut }, "end+=3")
 					.to("#sessionName", 0.5, { css: {   autoAlpha:0 },ease: Power4. easeInOut },  "end+=3")
-					.to("#sessionInfo", 0.5, { css: {   autoAlpha:0 },ease: Power4. easeInOut },  "end+=3"); 
-				*/
+					.to("#sessionInfo", 0.5, { css: {   autoAlpha:0 },ease: Power4. easeInOut },  "end+=3"); */
 				//  END ANIMATION //
 
 				if( typeof webvfx !== "undefined" ) {
