--- a/templates/lower_thirds/lt.webvfx.html
+++ b/templates/lower_thirds/lt.webvfx.html
@@ -10,6 +10,8 @@
 				height: 100%;
 				font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 				line-height: 1.1;
+				background-color: black;
+				color: #0b3865;
 			}
 		
 			.wrapper {
@@ -27,9 +29,8 @@
 			
 			#slate {
 				position: absolute;
-				background-color: #0b3865;
+				background-color: white;
 				z-index: 5;
-				color: white;
 				width: 66.666%;
 				margin: 0;
 				padding: 30px;
