--- a/templates/lower_thirds/lt.webvfx.html
+++ b/templates/lower_thirds/lt.webvfx.html
@@ -33,29 +33,29 @@
 				z-index: 5;
 				width: 100%;
 				margin: 0;
-				padding: 30px;
+				padding: 2rem;
 				left: 0;
 				bottom: -100%;
-				padding-right: 180px;
+				padding-right: 11rem;
 			}
 			
 			img
 			{
 				position: absolute;
-				bottom: 30px;
+				bottom: 2rem;
 				border-left: 1px solid white;
 				right: 0;
-				width: 150px;
-				padding: 0 30px;
+				width: 9rem;
+				padding: 0 2rem;
 			}
 			
 			#now {
 				position: absolute;
-				top: -45px;
+				top: -3rem;
 				left: 0;
 				background-color: #0b3865;
-				padding: 15px 30px 0;
-				font-size: 30px;
+				padding: 1rem 2rem 0;
+				font-size: 2rem;
 				color: #3dbb95;
 				line-height: 1;
 				text-transform: uppercase;
@@ -63,8 +63,8 @@
 
 			#sessionName {
 				margin: 0;
-				padding: 0 0 8px;
-				font-size: 56px;
+				padding: 0 0 .5rem;
+				font-size: 4rem;
 				font-weight: bold;
 				font-family: "NB Grotesk";
 				text-transform: uppercase;
@@ -73,7 +73,7 @@
 			#sessionInfo {		
 				margin: 0;
 				padding: 0;
-				font-size: 36px;
+				font-size: 2rem;
 				font-weight: normal;
 			}
 		 
