--- a/templates/lower_thirds/lt.webvfx.html
+++ b/templates/lower_thirds/lt.webvfx.html
@@ -10,7 +10,7 @@
 				height: 100%;
 				font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 				line-height: 1.1;
-				background-color: black;
+				-webkit-font-smoothing: antialiased;
 			}
 		
 			.wrapper {
@@ -33,7 +33,7 @@
 				z-index: 5;
 				width: 100%;
 				margin: 0;
-				padding: 2rem;
+				padding: 1.5rem 2rem 2rem;
 				left: 0;
 				bottom: -100%;
 				padding-right: 11rem;
@@ -51,10 +51,10 @@
 			
 			#now {
 				position: absolute;
-				top: -3rem;
+				top: -3.25rem;
 				left: 0;
 				background-color: #0b3865;
-				padding: 1rem 2rem 0;
+				padding: 1.5rem 2rem 0;
 				font-size: 2rem;
 				color: #3dbb95;
 				line-height: 1;
@@ -108,8 +108,8 @@
 
 				var tl = new TimelineLite();
 				tl.from("#slate", 0, { css: { bottom: "-100%" }, ease:Power4. easeOut })
-					.to("#slate", 2, { css: { bottom: "0" }, ease:Power4. easeOut })
-					.to("#slate", 6, { css: { bottom: "-100%" }, ease:Power4. easeOut }, "+=6")
+					.to("#slate", 1, { css: { bottom: "0" }, ease:Power4. easeOut }, "+=1")
+					//.to("#slate", 1, { css: { bottom: "-100%" }, ease:Power4. easeOut }, "+=6")
 
 				// Init
 				if( typeof webvfx !== "undefined" ) {
