--- a/templates/join_us_for_egx.webvfx.html
+++ b/templates/join_us_for_egx.webvfx.html
@@ -94,6 +94,35 @@
 				padding: 10px 0 0;
 			}
 		</style>
+		<script src="../lib/jquery-2.1.3.min.js"></script>
+		<script src="../lib/TweenMax.min.js"></script>
+		<script type="text/javascript">
+			function Producer(tl) {
+				this.tl=tl;
+			}
+			Producer.prototype.sync=function(time) {
+				// Use em units which are proportional to font-size,
+				// which is being set to proportional to page render size.
+				// Vary x offset from -0.2 to 0.2.
+				//this.textStyle.textShadow=((time * 0.4) - 0.2) + "em -0.2em 0.3em black";
+				console.log(time);
+				this.tl.progress(time);
+			}
+			function onLoad() {
+				handleFontSize();
+				var tl=new TimelineLite();
+				tl.pause();  // start paused
+				var producer=new Producer(tl);
+				webvfx.renderRequested.connect(producer, Producer.prototype.sync);
+				webvfx.readyRender(true);
+			}
+			function handleFontSize() {
+				// Set base font size to 2.4% of window height (as recommended by OFCOM)
+				// All other font sizes to be calculated as multiple in the set (1, inf)
+				document.body.style.fontSize=Math.round( window.innerHeight * 0.024 ) + "px";
+			}
+			window.addEventListener("load", onLoad, false);
+		</script>
 	</head>
 	<body>
 		<div class="wrapper">
