--- a/templates/now.webvfx.html
+++ b/templates/now.webvfx.html
@@ -7,6 +7,7 @@
 				background-color: #0b3865;
 				font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 				-webkit-font-smoothing: antialiased;
+				line-height: 1.1;
 			 }
 
 			.wrapper {
@@ -18,17 +19,8 @@
 			#slate {
 				position: absolute;
 				left: 620px;
-				right: 50px;
+				right: 100px;
 				top: 100px;	 
-			}
-
-			h1, h2 {
-				color: white;
-				width: 1050px;
-				line-height: 1.1;
-				margin-top: .2rem;
-				margin-bottom: 0px;
-				font-size: 1.3rem;
 			}
 
 			.logo {
@@ -44,7 +36,7 @@
 				text-transform: uppercase;
 				margin: 0;
 				padding: 0;
-				font-size: 3rem;
+				font-size: 3.5rem;
 				font-family: "NB Grotesk";
 			}
 			
@@ -54,22 +46,35 @@
 				padding-left: 50px;
 				border-left: 1px solid white;
 			}
+			
+			.sessionTime,
+			.sessionName,
+			.sessionInfo
+			{
+				margin: 0;
+				padding: 0;
+			}
 
 			.sessionTime {
-				font-size: 2rem;
+				font-size: 2.75rem;
 				color: #3dbb95;
+				padding-bottom: 1rem;
+				line-height: 1;
 			}
 
 			.sessionName {
 				font-family: "NB Grotesk";
 				text-transform: uppercase;
-				font-size: 3rem;
+				font-size: 3.75rem;
 				font-weight: bold;
+				padding-bottom: .35rem;
+				line-height: 1.1;
 			}
 			
 			.sessionInfo {
-				font-size: 2.25rem;
+				font-size: 3rem;
 				font-weight: normal;
+				line-height: 1.2;
 			}
 			
 			.links  {
