--- a/templates/now.webvfx.html
+++ b/templates/now.webvfx.html
@@ -38,6 +38,7 @@
 				padding: 0;
 				font-size: 3.5rem;
 				font-family: "NB Grotesk";
+				font-weight: bold;
 			}
 			
 			.session  {
@@ -91,6 +92,7 @@
 				text-transform: uppercase;
 				font-family: "NB Grotesk";
 				font-size: 3.5rem;
+				font-weight: bold;
 			}
 			
 			.links p {
