Added better prores options Started work on rezzed 2016

--- a/templates/shuhei.webvfx.html
+++ b/templates/shuhei.webvfx.html
@@ -156,7 +156,7 @@
 			<div id="slate">
 				<div class="session">
 					<h1 class="sessionName" id="s1">20 Years of Play - a Q&A with Shuhei&nbsp;Yoshida</h1>
-					<h2 class="sessionInfo" id="d1">Shuhei Yoshida, President of Worldwide Studios SCE, looks back at the launch of the PSone and his memories of the last 20 years of PlayStation.</h2>  	
+					<h2 class="sessionInfo" id="d1">Shuhei Yoshida, President of SCE Worldwide Studios, looks back at the launch of the PSone and his memories of the last 20 years of PlayStation.</h2>  	
 				</div>
 			</div>
 			<div class="links">
